# rinha-rust

./: .gitignore  Cargo.toml  Makefile  README.md  compose.local.yml  compose.perf.yml  docker-compose.yml  info.json
.github/workflows/: publish-image.yml  rust-ci.yml
bins/: api.rs  bench_replay.rs  preprocess.rs  verify.rs
docs/: README.pt-BR.md  architecture.md  performance.md
scripts/: generate_extended_test_data.py  perf_capture.sh  run_cpuset_matrix.py  run_resource_matrix.py  run_scale_leaf_matrix.py
src/: lib.rs  runtime.rs
src/api/: mod.rs
src/fd_passing/: mod.rs
src/http/: mod.rs
src/index/: build.rs  format.rs  mod.rs  search.rs  tests.rs
src/vector/: mod.rs  tests.rs
submission/: Dockerfile  Dockerfile.perf  docker-compose.yml
test/: smoke.js  test.js
