[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "api"
path = "bins/api.rs"

[[bin]]
name = "preprocess"
path = "bins/preprocess.rs"

[[bin]]
name = "verify"
path = "bins/verify.rs"

[dependencies]
libc = "0.2"
flate2 = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
